--- a/package.json
+++ b/package.json
@@ -7,14 +7,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.2",
     "react": "16.4.1",
-    "react-native": "0.56.1"
+    "react-native": "0.55.4"
   },
   "devDependencies": {
-    "babel-jest": "23.6.0",
-    "babel-preset-react-native": "5",
-    "jest": "23.6.0",
-    "react-test-renderer": "16.4.1"
+    "babel-jest": "23.4.2",
+    "babel-preset-react-native": "4.0.0",
+    "jest": "23.5.0",
+    "react-test-renderer": "16.4.1",
+    "eslint-config-rallycoding": "^3.2.0"
   },
   "jest": {
     "preset": "react-native"
